[package]
name = "torrentwork"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] } 
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
reqwest = "0.11.24"
tokio = { version = "1", features = ["full"] }
sha1-checked = "0.10.0"
hex = "0.4.3"
regex = "1.11.1"
log = "0.4.20"