[package]
name = "torrentwork"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] } 
serde_bencode = "0.2.4"
serde_bytes = "0.11.17"
bincode = "2.0.1"
reqwest = "0.11.24"
tokio = { version = "1", features = ["full"] }
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1.11.1"
magnet-url = "2.0.0"
trust-dns-resolver = "0.23.2"
url = "2.5.4"
urlencoding = "2.1.3"
sha256 = "1.6.0"
